# StorageRationalizer

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUDIT_REQUIREMENTS.md  CLAUDE.md  README.md  audit_runner.py  audit_runner.sh  cron_jobs.sh  deploy.sh  migrate.sh  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  run_local_checks.sh  setup_security_testing.sh  validate_prompts.sh  validate_setup.sh  verification_output.txt  verify_issues.sh
.github/workflows/: security.yml  test-extended.yml  test.yml
config/: logging_config.py
docs/: ACCESS_CONTROL_POLICY.md  API_USAGE_MONITORING.md  CLAUDE_SESSION_REFERENCE.md  CRITICAL_ISSUE_2_API_RESPONSE_VALIDATION_DESIGN.md  DEPENDENCY_MANAGEMENT_PLAN.md  DEPLOYMENT_GUIDE.md  EXTENDED_TESTING_PLAN.md  FINANCIAL_TARGETS.md  INCIDENT_RESPONSE_RUNBOOK.md  MAINTENANCE_SCHEDULE.md  MASTER_SETUP_GUIDE.md  METADATA_ENRICHMENT_DESIGN.md  MONITORING_AND_ALERTING.md  PROJECT_CONTEXT_SUMMARY.md  SECURITY_AUDIT_LOG.md  SECURITY_REMEDIATION_COMPLETION_REPORT.md
phase1/: scanner.py
phase2/: classifier.py  verifier.py
phase3/: cleaner.py
tests/: conftest.py  test_api_validators.py  test_classifier.py  test_cleaner_utils.py  test_input_validators.py  test_manifest_db.py  test_rollback.py  test_scanner_utils.py  test_tracker.py  test_verify_cleanup.py
tests/integration/: test_api_validators_integration.py  (+3 more)
tools/: __init__.py  api_monitor.py  api_validators.py  credentials_manager.py  financial_tracker.py  gphotos_test.py  input_validators.py  rollback.py  tracker.py  verify_cleanup.py
(+3 files in other folders)
