[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "storage-rationalizer"
version = "0.1.0"
description = "Consolidate duplicate files across cloud services into Google Drive"
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | __pycache__
  | credentials
  | manifests
  | reports
  | logs
)/
'''

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["credentials/", "manifests/", "reports/", "logs/"]

[tool.bandit]
exclude_dirs = ["tests", "credentials", "manifests", "reports", "logs"]
skips = ["B101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
